[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-relations = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version="^0.4.0", default-features = false }
ark-serialize = "^0.4.0"
ark-pallas = {version="0.4.0", features=["r1cs"]}

